add Tragos Clasicos

--- a/index.html
+++ b/index.html
@@ -210,6 +210,41 @@
                                     </div>
                                 </div>
                             </div>
+                            <h2 class="ppb_title_first">Tragos Clásicos</h2>
+                            <div class="menu_items">
+                                <div class="one_half ">
+                                    <div id="menu_3197" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Cuba Libre</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$350</span></h5>
+                                    </div>
+                                </div>
+                                <div class="one_half last">
+                                    <div id="menu_3172" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Destornillador</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$350</span></h5>
+                                    </div>
+                                </div>
+                                <div class="one_half ">
+                                    <div id="menu_3173" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Fernet</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$350</span></h5>
+                                    </div>
+                                </div>
+                                <div class="one_half last">
+                                    <div id="menu_3174" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Gin tonic</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$350</span></h5>
+                                    </div>
+                                </div>
+                            </div>  
                         </div>
                     </div>
                 </div>
@@ -219,7 +254,7 @@
                     <div class="page_content_wrapper">
                         <div class="inner">
                             <div class="menu_container">
-                                <h3 class="ppb_menu_title">Cervezas</h3>
+                                <h2 class="ppb_title_first">Cervezas</h2>
                                 <div class="menu_items">
                                     <div class="one_third ">
                                         <div id="menu_3197" class="menu_content_classic">
@@ -272,7 +307,7 @@
                     <div class="page_content_wrapper">
                         <div class="inner">
                             <div class="menu_container">
-                                <h3 class="ppb_menu_title">Bebidas sin Alcohol</h3>
+                                <h2 class="ppb_title_first">Bebidas sin Alcohol</h2>
                                 <div class="menu_items">
                                     <div class="one_third ">
                                         <div id="menu_3182" class="menu_content_classic">
@@ -318,7 +353,7 @@
                     <div class="page_content_wrapper">
                         <div class="inner">
                             <div class="menu_container">
-                               <h3 class="ppb_menu_title">Medidas</h3>
+                               <h2 class="ppb_title_first">Medidas</h2>
                                 <div class="menu_items">
                                     <div class="one_third ">
                                         <div id="menu_3197" class="menu_content_classic">
@@ -364,7 +399,7 @@
                                     <div class="one_third ">
                                         <div id="menu_3183" class="menu_content_classic">
                                             <h5 class="menu_post">
-                                                <span class="menu_title">Shot Cuervo</span>
+                                                <span class="menu_title">Tequila José Cuervo</span>
                                                 <span class="menu_dots"></span>
                                                 <span class="menu_price">$450</span></h5>
                                         </div>
