last changes before launch

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                             <span class="menu_title">Fix Latino</span>
                                             <span class="menu_dots"></span>
                                             <span class="menu_price">$400</span></h5>
-                                        <div class="post_detail menu_excerpt">Bacardi/ Jugo de limón / Almibar / Licor de saúco / Menta / Frutos rojos / Piel de limón.</div>
+                                        <div class="post_detail menu_excerpt">Bacardi/ Jugo de limón / Almibar / Licor de saúco / Menta / Frutos rojos.</div>
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                                             <span class="menu_title">Spritz Porteño</span>
                                             <span class="menu_dots"></span>
                                             <span class="menu_price">$450</span></h5>
-                                        <div class="post_detail menu_excerpt">Lunfa rosado de verbena / Licor de sauco / Espumante dash / Soda / Jengibre.</div>
+                                        <div class="post_detail menu_excerpt">Lunfa rosado de verbena / Licor de sauco / Dash de espumante / Soda / Jengibre.</div>
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                                             <span class="menu_title">Poder del Tónico</span>
                                             <span class="menu_dots"></span>
                                             <span class="menu_price">$450</span></h5>
-                                        <div class="post_detail menu_excerpt">Gin / Lunfa rosado / Limón / Miel / Menta.</div>
+                                        <div class="post_detail menu_excerpt">Gin / Lunfa rosado / Limón / Miel.</div>
                                     </div>
                                 </div>
                                 <div class="one_half ">
@@ -175,7 +175,7 @@
                                             <span class="menu_title">La cura</span>
                                             <span class="menu_dots"></span>
                                             <span class="menu_price">$550</span></h5>
-                                        <div class="post_detail menu_excerpt">Black label / Limón / Almibar / Jengibre.</div>
+                                        <div class="post_detail menu_excerpt">Johnnie Walker / Limón / Miel / Jengibre.</div>
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                     </div>
                                 </div>
