--- a/index.html
+++ b/index.html
@@ -189,15 +189,6 @@
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                     </div>
                                 </div>
-                                <div class="one_half last">
-                                    <div id="menu_3178" class="menu_content_classic">
-                                        <h5 class="menu_post">
-                                            <span class="menu_title">Copa de vino</span>
-                                            <span class="menu_dots"></span>
-                                            <span class="menu_price">$350</span></h5>
-                                            <div class="post_detail menu_excerpt">Alamos Malbec / Alamos Sauvignon Blanc. </div>
-                                    </div>
-                                </div>
                             </div>
                             <h2 class="ppb_title_first">Tragos Clásicos</h2>
                             <div class="menu_items">
@@ -264,7 +255,7 @@
                                     <div class="one_third">
                                         <div id="menu_3184" class="menu_content_classic">
                                             <h5 class="menu_post">
-                                                <span class="menu_title">Babuina Honey</span>
+                                                <span class="menu_title">Babuina Amber</span>
                                                 <span class="menu_dots"></span>
                                                 <span class="menu_price">$270</span></h5>
                                         </div>
@@ -407,6 +398,15 @@
                                                 <span class="menu_title">Baileys</span>
                                                 <span class="menu_dots"></span>
                                                 <span class="menu_price">$450</span></h5>
+                                        </div>
+                                    </div>
+                                    <div class="one_half last">
+                                        <div id="menu_3178" class="menu_content_classic">
+                                            <h5 class="menu_post">
+                                                <span class="menu_title">Copa de vino</span>
+                                                <span class="menu_dots"></span>
+                                                <span class="menu_price">$350</span></h5>
+                                                <div class="post_detail menu_excerpt">Alamos Malbec / Alamos Sauvignon Blanc. </div>
                                         </div>
                                     </div>
                                 </div>
