add new food img

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 </div>
             </div>
             
-        <div class="parallax title" data-image="img/banner2.jpg" data-width="1348" data-height="899" data-content-height="60">
+        <div class="parallax title" data-image="./img/siwabar-comer-img-2021_sep.jpeg" data-width="1348" data-height="899" data-content-height="60">
             <div class="parallax_title">
                 <h2 class="ppb_title"><span class="ppb_title_first" ></span></h2></div>
         </div>
