update manu 14-Oct 2021

--- a/index.html
+++ b/index.html
@@ -141,15 +141,6 @@
                                         <div class="post_detail menu_excerpt">Gin / Lunfa rosado / Limón / Miel.</div>
                                     </div>
                                 </div>
-                                <div class="one_half ">
-                                    <div id="menu_3175" class="menu_content_classic">
-                                        <h5 class="menu_post">
-                                            <span class="menu_title">Manantial</span>
-                                            <span class="menu_dots"></span>
-                                            <span class="menu_price">$450</span></h5>
-                                        <div class="post_detail menu_excerpt">Limón / Miel / Ginger Ale</div>
-                                    </div>
-                                </div>
                                 <div class="one_half last">
                                     <div id="menu_3176" class="menu_content_classic">
                                         <h5 class="menu_post">
@@ -179,7 +170,7 @@
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                     </div>
                                 </div>
-                                    <div class="one_half ">
+                                <div class="one_half ">
                                     <div id="menu_3177" class="menu_content_classic">
                                         <h5 class="menu_post">
                                             <span class="menu_title">ESPRESSO SIWA</span>
@@ -187,6 +178,15 @@
                                             <span class="menu_price">$400</span></h5>
                                         <div class="post_detail menu_excerpt">Ron Blanco / Licor de café / Café almibar</div>
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
+                                    </div>
+                                </div>
+                                <div class="one_half ">
+                                    <div id="menu_3175" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Elixir</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$450</span></h5>
+                                        <div class="post_detail menu_excerpt">Mango / Naranja / Maracuya / Ron Blanco / Cereza en almibar</div>
                                     </div>
                                 </div>
                             </div>
@@ -224,6 +224,14 @@
                                             <span class="menu_price">$350</span></h5>
                                     </div>
                                 </div>
+                                <div class="one_half last">
+                                    <div id="menu_3174" class="menu_content_classic">
+                                        <h5 class="menu_post">
+                                            <span class="menu_title">Jagger + speed</span>
+                                            <span class="menu_dots"></span>
+                                            <span class="menu_price">$600</span></h5>
+                                    </div>
+                                </div>
                             </div>  
                         </div>
                     </div>
@@ -241,7 +249,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Corona</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$300</span></h5>
+                                                <span class="menu_price">$350</span></h5>
                                         </div>
                                     </div>
                                     <div class="one_third last">
@@ -257,7 +265,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Babuina Amber</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$270</span></h5>
+                                                <span class="menu_price">$280</span></h5>
                                         </div>
                                     </div>
                                     <div class="one_third ">
@@ -265,7 +273,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Babuina Ipa</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$270</span></h5>
+                                                <span class="menu_price">$280</span></h5>
                                         </div>
                                     </div>
                                     <div class="one_third ">
@@ -273,7 +281,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Babuina Pale Ale</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$270</span></h5>
+                                                <span class="menu_price">$280</span></h5>
                                         </div>
                                     </div>
                                 </div>
@@ -433,7 +441,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">TEQUEÑOS</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$350</span></h5>
+                                                <span class="menu_price">$400</span></h5>
                                             <div class="post_detail menu_excerpt">6 unidades</div>
                                             <div class="menu_highlight"><i class="fa fa-star"></i></div>
                                         </div>
@@ -443,7 +451,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Papas fritas</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$300</span></h5>
+                                                <span class="menu_price">$350</span></h5>
                                             <div class="post_detail menu_excerpt">Porción para compartir</div>
                                         </div>
                                     </div>
@@ -480,7 +488,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Lolipops</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$400</span></h5>
+                                                <span class="menu_price">$450</span></h5>
                                             <div class="post_detail menu_excerpt">Chupetines de pollo | 6 Unidades </div>
                                         </div>
                                     </div>
