--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <div id="menu_3177" class="menu_content_classic">
                                         <h5 class="menu_post">
                                             <span class="menu_title">ESPRESSO SIWA</span>
-                                            <span class="menu_dots"></span>
+                                            <span class="menu_dots"></span><
                                             <span class="menu_price">$400</span></h5>
                                         <div class="post_detail menu_excerpt">Ron Blanco / Licor de café / Café almibar</div>
                                         <div class="menu_highlight"><i class="fa fa-star"></i></div>
@@ -310,7 +310,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Red Bull</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$220</span></h5>
+                                                <span class="menu_price">$250</span></h5>
                                         </div>
                                     </div>
                                     <div class="one_third">
@@ -318,7 +318,7 @@
                                             <h5 class="menu_post">
                                                 <span class="menu_title">Speed</span>
                                                 <span class="menu_dots"></span>
-                                                <span class="menu_price">$180</span></h5>
+                                                <span class="menu_price">$220</span></h5>
                                         </div>
                                     </div>
                                     <div class="one_third last">
