--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                         <h5 class="menu_post">
                                             <span class="menu_title">Elixir</span>
                                             <span class="menu_dots"></span>
-                                            <span class="menu_price">1500</span></h5>
+                                            <span class="menu_price">$1500</span></h5>
                                         <div class="post_detail menu_excerpt">Mango / Naranja / Maracuya / Ron Blanco / Cereza en almibar</div>
                                     </div>
                                 </div>
@@ -463,7 +463,7 @@
                                                 <span class="menu_title">CHICKEN WINGS</span>
                                                 <span class="menu_dots"></span>
                                                 <span class="menu_price">$1200</span></h5>
-                                            <div class="post_detail menu_excerpt">Alitas de pollo | 6 unidades</div>
+                                            <div class="post_detail menu_excerpt">Alitas de pollo | 8 unidades</div>
                                         </div>
                                     </div>
                                     <div class="one_third ">
